@@ -44,27 +44,34 @@ import static org.openmetadata.catalog.util.TestUtils.validateAlphabeticalOrderi
 import static org.openmetadata.common.utils.CommonUtil.listOrEmpty;
 import static org.openmetadata.common.utils.CommonUtil.nullOrEmpty;
 
+import com.auth0.jwk.JwkException;
+import com.auth0.jwt.JWT;
+import com.auth0.jwt.exceptions.JWTDecodeException;
+import com.auth0.jwt.interfaces.DecodedJWT;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import java.io.IOException;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Calendar;
 import java.util.Collections;
+import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.TimeZone;
 import java.util.UUID;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
-import javax.json.JsonPatch;
+import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.http.client.HttpResponseException;
 import org.junit.jupiter.api.MethodOrderer;
 import org.junit.jupiter.api.Order;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInfo;
 import org.junit.jupiter.api.TestMethodOrder;
-import org.openmetadata.catalog.CatalogApplicationTest;
 import org.openmetadata.catalog.Entity;
 import org.openmetadata.catalog.api.teams.CreateUser;
 import org.openmetadata.catalog.entity.data.Table;
@@ -72,19 +79,18 @@ import org.openmetadata.catalog.entity.teams.Role;
 import org.openmetadata.catalog.entity.teams.Team;
 import org.openmetadata.catalog.entity.teams.User;
 import org.openmetadata.catalog.exception.CatalogExceptionMessage;
-import org.openmetadata.catalog.jdbi3.RoleRepository.RoleEntityInterface;
-import org.openmetadata.catalog.jdbi3.TeamRepository.TeamEntityInterface;
-import org.openmetadata.catalog.jdbi3.UserRepository.UserEntityInterface;
 import org.openmetadata.catalog.resources.EntityResourceTest;
 import org.openmetadata.catalog.resources.databases.TableResourceTest;
 import org.openmetadata.catalog.resources.locations.LocationResourceTest;
 import org.openmetadata.catalog.resources.teams.UserResource.UserList;
+import org.openmetadata.catalog.security.AuthenticationException;
+import org.openmetadata.catalog.teams.authn.JWTAuthMechanism;
+import org.openmetadata.catalog.teams.authn.JWTTokenExpiry;
 import org.openmetadata.catalog.type.ChangeDescription;
 import org.openmetadata.catalog.type.EntityReference;
 import org.openmetadata.catalog.type.FieldChange;
 import org.openmetadata.catalog.type.ImageList;
 import org.openmetadata.catalog.type.Profile;
-import org.openmetadata.catalog.util.EntityInterface;
 import org.openmetadata.catalog.util.EntityUtil;
 import org.openmetadata.catalog.util.JsonUtils;
 import org.openmetadata.catalog.util.ResultList;
@@ -106,12 +112,12 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
     USER1 =
         userResourceTest.createEntity(
             userResourceTest.createRequest(test).withRoles(List.of(DATA_CONSUMER_ROLE.getId())), ADMIN_AUTH_HEADERS);
-    USER_OWNER1 = new UserEntityInterface(USER1).getEntityReference();
+    USER_OWNER1 = USER1.getEntityReference();
 
     USER2 =
         userResourceTest.createEntity(
             userResourceTest.createRequest(test, 1).withRoles(List.of(DATA_CONSUMER_ROLE.getId())), ADMIN_AUTH_HEADERS);
-    USER_OWNER2 = new UserEntityInterface(USER2).getEntityReference();
+    USER_OWNER2 = USER2.getEntityReference();
 
     USER_WITH_DATA_STEWARD_ROLE =
         userResourceTest.createEntity(
@@ -129,7 +135,7 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
 
     TeamResourceTest teamResourceTest = new TeamResourceTest();
     TEAM1 = teamResourceTest.createEntity(teamResourceTest.createRequest(test), ADMIN_AUTH_HEADERS);
-    TEAM_OWNER1 = new TeamEntityInterface(TEAM1).getEntityReference();
+    TEAM_OWNER1 = TEAM1.getEntityReference();
   }
 
   @Test
@@ -142,93 +148,103 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
   @Order(Integer.MAX_VALUE) // Run this test last to avoid side effects of default role creation to fail other tests.
   @Test
   void userDefaultRoleAssignment(TestInfo test) throws IOException {
-    // Given a global default role has been set, ...
+    // Find a nonDefault role
     RoleResourceTest roleResourceTest = new RoleResourceTest();
     List<Role> roles = roleResourceTest.listEntities(Collections.emptyMap(), ADMIN_AUTH_HEADERS).getData();
-    UUID nonDefaultRoleId = roles.stream().filter(role -> !role.getDefaultRole()).findAny().orElseThrow().getId();
-    UUID defaultRoleId =
-        roles.stream()
-            .filter(Role::getDefaultRole)
-            .findAny()
-            .orElseThrow()
-            .getId(); // DataConsumer is global default role.
+    Role nonDefaultRole = roles.stream().filter(role -> !role.getDefaultRole()).findAny().orElseThrow();
+    EntityReference nonDefaultRoleRef = nonDefaultRole.getEntityReference();
+
+    // Find a default role
+    EntityReference defaultRoleRef = getDefaultRole();
+    assertNotNull(defaultRoleRef);
 
     // ... when a user is created without any roles, then the global default role should be assigned.
     CreateUser create = createRequest(test, 1);
-    User user1 = createUserAndCheckRoles(create, Arrays.asList(defaultRoleId));
+    User user1 = createUserAndCheckRoles(create, Collections.emptyList(), Arrays.asList(defaultRoleRef));
 
-    // ... when a user is created with a non default role, then the global default role should be assigned along with
-    // the non default role.
-    create = createRequest(test, 2).withRoles(List.of(nonDefaultRoleId));
-    User user2 = createUserAndCheckRoles(create, Arrays.asList(nonDefaultRoleId, defaultRoleId));
+    // ... when a user is created with a non default role, then the global default role
+    // should be assigned along with the non default role.
+    create = createRequest(test, 2).withRoles(List.of(nonDefaultRole.getId()));
+    User user2 = createUserAndCheckRoles(create, Arrays.asList(nonDefaultRoleRef), Arrays.asList(defaultRoleRef));
 
     // ... when a user is created with both global default and non-default role, then both roles should be assigned.
-    create = createRequest(test, 3).withRoles(List.of(nonDefaultRoleId, defaultRoleId));
-    User user3 = createUserAndCheckRoles(create, Arrays.asList(nonDefaultRoleId, defaultRoleId));
+    create = createRequest(test, 3).withRoles(List.of(nonDefaultRole.getId(), defaultRoleRef.getId()));
+    User user3 =
+        createUserAndCheckRoles(
+            create, Arrays.asList(nonDefaultRoleRef, defaultRoleRef), Arrays.asList(defaultRoleRef));
 
-    // Given the default role has changed, ...
-    UUID prevDefaultRoleId = defaultRoleId;
-    Role defaultRole = roleResourceTest.createEntity(roleResourceTest.createRequest(test, 1000), ADMIN_AUTH_HEADERS);
-    String defaultRoleJson = JsonUtils.pojoToJson(defaultRole);
-    defaultRole.setDefaultRole(true);
-    defaultRoleId = defaultRole.getId(); // New global default role.
-    assertNotEquals(prevDefaultRoleId, defaultRoleId);
-    roleResourceTest.patchEntity(defaultRoleId, defaultRoleJson, defaultRole, ADMIN_AUTH_HEADERS);
+    // Change the default roles and make sure the change is reflected in all users
+    Role newDefaultRole = roleResourceTest.createEntity(roleResourceTest.createRequest(test, 1000), ADMIN_AUTH_HEADERS);
+    EntityReference newDefaultRoleRef = newDefaultRole.getEntityReference();
+    String defaultRoleJson = JsonUtils.pojoToJson(newDefaultRole);
+    newDefaultRole.setDefaultRole(true);
+    roleResourceTest.patchEntity(newDefaultRole.getId(), defaultRoleJson, newDefaultRole, ADMIN_AUTH_HEADERS);
 
     // ... when user1 exists, then ensure that the default role changed.
     user1 = getEntity(user1.getId(), ADMIN_AUTH_HEADERS);
-    assertRoles(user1, Arrays.asList(defaultRoleId));
+    assertRoles(user1, Collections.emptyList(), Arrays.asList(newDefaultRoleRef));
 
     // ... when user2 exists, then ensure that the default role changed.
     user2 = getEntity(user2.getId(), ADMIN_AUTH_HEADERS);
-    assertRoles(user2, Arrays.asList(nonDefaultRoleId, defaultRoleId));
+    assertRoles(user2, Arrays.asList(nonDefaultRoleRef), Arrays.asList(newDefaultRoleRef));
 
     // ... when user3 exists, then ensure that the default role changed.
     user3 = getEntity(user3.getId(), ADMIN_AUTH_HEADERS);
-    assertRoles(user3, Arrays.asList(nonDefaultRoleId, defaultRoleId));
+    assertRoles(user3, Arrays.asList(nonDefaultRoleRef), Arrays.asList(newDefaultRoleRef));
 
-    Role role1 = roleResourceTest.createEntity(roleResourceTest.createRequest(test, 1001), ADMIN_AUTH_HEADERS);
-    Role role2 = roleResourceTest.createEntity(roleResourceTest.createRequest(test, 1002), ADMIN_AUTH_HEADERS);
+    // Create team1 with defaultRole role1
+    Role role1 =
+        roleResourceTest.createEntity(
+            roleResourceTest.createRequest("teamDefaultRole1", "", "", null), ADMIN_AUTH_HEADERS);
+    EntityReference role1Ref = role1.getEntityReference();
 
     TeamResourceTest teamResourceTest = new TeamResourceTest();
     Team team1 =
         teamResourceTest.createEntity(
             teamResourceTest.createRequest(test, 1).withDefaultRoles(List.of(role1.getId())), ADMIN_AUTH_HEADERS);
+    EntityReference team1Ref = team1.getEntityReference();
+
+    // Create team2 with defaultRole role2
+    Role role2 =
+        roleResourceTest.createEntity(
+            roleResourceTest.createRequest("teamDefaultRole2", "", "", null), ADMIN_AUTH_HEADERS);
+    EntityReference role2Ref = role2.getEntityReference();
+
     Team team2 =
         teamResourceTest.createEntity(
             teamResourceTest.createRequest(test, 2).withDefaultRoles(List.of(role1.getId(), role2.getId())),
             ADMIN_AUTH_HEADERS);
+    EntityReference team2Ref = team2.getEntityReference();
 
-    // Given user1 is not part of any team and have no roles assigned, when user1 joins team1, then user1 gets assigned
-    // the global default role and the team1 default role, role1.
+    // user1 has defaultRole
+    // Add user1 to team1 to inherit default of roles of team1(role1)
     String originalUser1 = JsonUtils.pojoToJson(user1);
-    user1.setTeams(List.of(new TeamEntityInterface(team1).getEntityReference()));
-    user1 = patchUser(originalUser1, user1, ADMIN_AUTH_HEADERS);
-    assertRoles(user1, Arrays.asList(defaultRoleId, role1.getId()));
+    user1.setTeams(List.of(team1Ref));
+    user1 = patchEntity(user1.getId(), originalUser1, user1, ADMIN_AUTH_HEADERS);
+    assertRoles(user1, Collections.emptyList(), Arrays.asList(newDefaultRoleRef, role1Ref));
 
-    // Given user1 is part of team1, when user1 joins team2, then user1 gets assigned the global default role, the
-    // team1 default role, role1 and team2 default role, role2.
+    // user1 now has default role and role1 (through team1)
+    // Add user1 to team2 to inherit default of roles team1 (role1 and role2)
     originalUser1 = JsonUtils.pojoToJson(user1);
-    user1.setTeams(
-        List.of(
-            new TeamEntityInterface(team1).getEntityReference(), new TeamEntityInterface(team2).getEntityReference()));
-    user1 = patchUser(originalUser1, user1, ADMIN_AUTH_HEADERS);
-    assertRoles(user1, Arrays.asList(defaultRoleId, role1.getId(), role2.getId()));
+    user1.setTeams(List.of(team1Ref, team2Ref));
+    user1 = patchEntity(user1.getId(), originalUser1, user1, ADMIN_AUTH_HEADERS);
+    assertRoles(user1, Collections.emptyList(), Arrays.asList(newDefaultRoleRef, role1Ref, role2Ref));
 
-    // Given user2 has a non default role assigned, when user2 joins team2, then user2 should get assigned the global
-    // default role, team2 default roles, role1 and role2, and retain its non-default role.
+    // user2 has defaultRole and nonDefaultRole
+    // Add user2 to team2 and inherit default roles role1 and role2 of team2
     String originalUser2 = JsonUtils.pojoToJson(user2);
-    user2.setTeams(List.of(new TeamEntityInterface(team2).getEntityReference()));
-    user2 = patchUser(originalUser2, user2, ADMIN_AUTH_HEADERS);
-    assertRoles(user2, Arrays.asList(defaultRoleId, role1.getId(), role2.getId(), nonDefaultRoleId));
+    user2.setTeams(List.of(team2Ref));
+    user2 = patchEntity(user2.getId(), originalUser2, user2, ADMIN_AUTH_HEADERS);
+    assertRoles(user2, Arrays.asList(nonDefaultRoleRef), Arrays.asList(newDefaultRoleRef, role1Ref, role2Ref));
 
     // Given user2 has a non default role assigned, when user2 leaves team2, then user2 should get assigned the global
     // default role and retain its non-default role.
-    // To be fixed in https://github.com/open-metadata/OpenMetadata/issues/2969
-    //    originalUser2 = JsonUtils.pojoToJson(user2);
-    //    user2.setTeams(null);
-    //    user2 = patchUser(originalUser2, user2, ADMIN_AUTH_HEADERS);
-    //    assertRoles(user2, Arrays.asList(defaultRoleId, nonDefaultRoleId));
+    originalUser2 = JsonUtils.pojoToJson(user2);
+    ChangeDescription change = getChangeDescription(user2.getVersion());
+    change.getFieldsDeleted().add(new FieldChange().withName("teams").withOldValue(List.of(team2Ref)));
+    user2.setTeams(null);
+    user2 = patchEntityAndCheck(user2, originalUser2, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
+    assertRoles(user2, Arrays.asList(nonDefaultRoleRef), Arrays.asList(newDefaultRoleRef));
   }
 
   @Test
@@ -279,20 +295,17 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
   }
 
   @Test
-  void put_validUser_200_ok(TestInfo test) throws IOException {
+  void put_validUser_200_ok() throws IOException {
     // Create user with different optional fields
-    CreateUser create = createRequest(test, 1);
+    CreateUser create = createRequest("user.xyz", null, null, null);
     User user = updateAndCheckEntity(create, CREATED, ADMIN_AUTH_HEADERS, UpdateType.CREATED, null);
 
     // Update the user information using PUT
     String oldEmail = create.getEmail();
-    String oldDisplayName = create.getDisplayName();
     CreateUser update = create.withEmail("test1@email.com").withDisplayName("displayName1");
 
     ChangeDescription change = getChangeDescription(user.getVersion());
-    change
-        .getFieldsAdded()
-        .add(new FieldChange().withName("displayName").withOldValue(oldDisplayName).withNewValue("displayName1"));
+    change.getFieldsAdded().add(new FieldChange().withName("displayName").withNewValue("displayName1"));
     change
         .getFieldsUpdated()
         .add(new FieldChange().withName("email").withOldValue(oldEmail).withNewValue("test1@email.com"));
@@ -345,19 +358,9 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
     RoleResourceTest roleResourceTest = new RoleResourceTest();
     Role role1 = roleResourceTest.createEntity(roleResourceTest.createRequest(test, 1), ADMIN_AUTH_HEADERS);
     Role role2 = roleResourceTest.createEntity(roleResourceTest.createRequest(test, 2), ADMIN_AUTH_HEADERS);
-    UUID defaultRoleId =
-        roleResourceTest.listEntities(Collections.emptyMap(), ADMIN_AUTH_HEADERS).getData().stream()
-            .filter(Role::getDefaultRole)
-            .findAny()
-            .orElseThrow()
-            .getId(); // DataConsumer is default role.
-    EntityReference defaultRoleRef =
-        new RoleEntityInterface(roleResourceTest.getEntity(defaultRoleId, RoleResource.FIELDS, ADMIN_AUTH_HEADERS))
-            .getEntityReference();
-
     List<UUID> roles = Arrays.asList(role1.getId(), role2.getId());
     CreateUser create = createRequest(test).withRoles(roles);
-    List<UUID> createdRoles = Arrays.asList(role1.getId(), role2.getId(), defaultRoleRef.getId());
+    List<UUID> createdRoles = Arrays.asList(role1.getId(), role2.getId());
     CreateUser created = createRequest(test).withRoles(createdRoles);
     User user = createAndCheckEntity(create, ADMIN_AUTH_HEADERS, created);
 
@@ -503,7 +506,9 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
     String userJson = JsonUtils.pojoToJson(user);
     user.setDisplayName("newName");
     assertResponse(
-        () -> patchUser(userJson, user, authHeaders("test100@email.com")), FORBIDDEN, noPermission("test100"));
+        () -> patchEntity(user.getId(), userJson, user, authHeaders("test100@email.com")),
+        FORBIDDEN,
+        noPermission("test100"));
   }
 
   @Test
@@ -516,7 +521,7 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
     String userJson = JsonUtils.pojoToJson(user);
     user.setIsAdmin(Boolean.TRUE);
     Map<String, String> authHeaders = authHeaders("test100@email.com");
-    assertResponse(() -> patchUser(userJson, user, authHeaders), FORBIDDEN, notAdmin("test100"));
+    assertResponse(() -> patchEntity(user.getId(), userJson, user, authHeaders), FORBIDDEN, notAdmin("test100"));
   }
 
   @Test
@@ -529,7 +534,7 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
     String userJson = JsonUtils.pojoToJson(user);
     String newDisplayName = "newDisplayName";
     user.setDisplayName(newDisplayName); // Update the name
-    user = patchUser(userJson, user, ADMIN_AUTH_HEADERS); // Patch the user
+    user = patchEntity(user.getId(), userJson, user, ADMIN_AUTH_HEADERS); // Patch the user
     assertEquals(newDisplayName, user.getDisplayName());
   }
 
@@ -541,31 +546,17 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
 
     TeamResourceTest teamResourceTest = new TeamResourceTest();
     EntityReference team1 =
-        new TeamEntityInterface(
-                teamResourceTest.createEntity(teamResourceTest.createRequest(test, 1), ADMIN_AUTH_HEADERS))
-            .getEntityReference();
+        teamResourceTest.createEntity(teamResourceTest.createRequest(test, 1), ADMIN_AUTH_HEADERS).getEntityReference();
     EntityReference team2 =
-        new TeamEntityInterface(
-                teamResourceTest.createEntity(teamResourceTest.createRequest(test, 2), ADMIN_AUTH_HEADERS))
-            .getEntityReference();
+        teamResourceTest.createEntity(teamResourceTest.createRequest(test, 2), ADMIN_AUTH_HEADERS).getEntityReference();
     EntityReference team3 =
-        new TeamEntityInterface(
-                teamResourceTest.createEntity(teamResourceTest.createRequest(test, 3), ADMIN_AUTH_HEADERS))
-            .getEntityReference();
+        teamResourceTest.createEntity(teamResourceTest.createRequest(test, 3), ADMIN_AUTH_HEADERS).getEntityReference();
     List<EntityReference> teams = Arrays.asList(team1, team2);
     Profile profile = new Profile().withImages(new ImageList().withImage(URI.create("http://image.com")));
 
     RoleResourceTest roleResourceTest = new RoleResourceTest();
-    List<Role> roles = roleResourceTest.listEntities(Collections.emptyMap(), ADMIN_AUTH_HEADERS).getData();
-    UUID defaultRoleId =
-        roles.stream().filter(Role::getDefaultRole).findAny().orElseThrow().getId(); // DataConsumer is default role.
-    EntityReference defaultRoleRef =
-        new RoleEntityInterface(roleResourceTest.getEntity(defaultRoleId, RoleResource.FIELDS, ADMIN_AUTH_HEADERS))
-            .getEntityReference();
     EntityReference role1 =
-        new RoleEntityInterface(
-                roleResourceTest.createEntity(roleResourceTest.createRequest(test, 1), ADMIN_AUTH_HEADERS))
-            .getEntityReference();
+        roleResourceTest.createEntity(roleResourceTest.createRequest(test, 1), ADMIN_AUTH_HEADERS).getEntityReference();
 
     //
     // Add previously absent attributes
@@ -573,23 +564,13 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
     String origJson = JsonUtils.pojoToJson(user);
 
     String timezone = "America/Los_Angeles";
-    user.withRoles(Arrays.asList(role1, defaultRoleRef))
+    user.withRoles(Arrays.asList(role1))
         .withTeams(teams)
         .withTimezone(timezone)
         .withDisplayName("displayName")
         .withProfile(profile)
         .withIsBot(false)
         .withIsAdmin(false);
-    User update =
-        JsonUtils.readValue(origJson, User.class)
-            .withRoles(Arrays.asList(role1))
-            .withTeams(teams)
-            .withTimezone(timezone)
-            .withDisplayName("displayName")
-            .withProfile(profile)
-            .withIsBot(false)
-            .withIsAdmin(false);
-
     ChangeDescription change = getChangeDescription(user.getVersion());
     change.getFieldsAdded().add(new FieldChange().withName("roles").withNewValue(Arrays.asList(role1)));
     change.getFieldsAdded().add(new FieldChange().withName("teams").withNewValue(teams));
@@ -597,7 +578,7 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
     change.getFieldsAdded().add(new FieldChange().withName("displayName").withNewValue("displayName"));
     change.getFieldsAdded().add(new FieldChange().withName("profile").withNewValue(profile));
     change.getFieldsAdded().add(new FieldChange().withName("isBot").withNewValue(false));
-    user = patchEntityAndCheck(user, origJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change, update);
+    user = patchEntityAndCheck(user, origJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
 
     //
     // Replace the attributes
@@ -607,27 +588,16 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
     Profile profile1 = new Profile().withImages(new ImageList().withImage(URI.create("http://image2.com")));
 
     EntityReference role2 =
-        new RoleEntityInterface(
-                roleResourceTest.createEntity(roleResourceTest.createRequest(test, 2), ADMIN_AUTH_HEADERS))
-            .getEntityReference();
+        roleResourceTest.createEntity(roleResourceTest.createRequest(test, 2), ADMIN_AUTH_HEADERS).getEntityReference();
 
     origJson = JsonUtils.pojoToJson(user);
-    user.withRoles(Arrays.asList(role2, defaultRoleRef))
+    user.withRoles(Arrays.asList(role2))
         .withTeams(teams1)
         .withTimezone(timezone1)
         .withDisplayName("displayName1")
         .withProfile(profile1)
         .withIsBot(true)
         .withIsAdmin(false);
-    update =
-        JsonUtils.readValue(origJson, User.class)
-            .withRoles(Arrays.asList(role2))
-            .withTeams(teams1)
-            .withTimezone(timezone1)
-            .withDisplayName("displayName1")
-            .withProfile(profile1)
-            .withIsBot(true)
-            .withIsAdmin(false);
 
     change = getChangeDescription(user.getVersion());
     change.getFieldsDeleted().add(new FieldChange().withName("roles").withOldValue(Arrays.asList(role1)));
@@ -642,28 +612,19 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
         .add(new FieldChange().withName("displayName").withOldValue("displayName").withNewValue("displayName1"));
     change.getFieldsUpdated().add(new FieldChange().withName("profile").withOldValue(profile).withNewValue(profile1));
     change.getFieldsUpdated().add(new FieldChange().withName("isBot").withOldValue(false).withNewValue(true));
-    user = patchEntityAndCheck(user, origJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change, update);
+    user = patchEntityAndCheck(user, origJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
 
     //
     // Remove the attributes
     //
     origJson = JsonUtils.pojoToJson(user);
-    user.withRoles(Arrays.asList(defaultRoleRef))
+    user.withRoles(null)
         .withTeams(null)
         .withTimezone(null)
         .withDisplayName(null)
         .withProfile(null)
         .withIsBot(null)
         .withIsAdmin(false);
-    update =
-        JsonUtils.readValue(origJson, User.class)
-            .withRoles(null)
-            .withTeams(null)
-            .withTimezone(null)
-            .withDisplayName(null)
-            .withProfile(null)
-            .withIsBot(null)
-            .withIsAdmin(false);
 
     // Note non-empty display field is not deleted
     change = getChangeDescription(user.getVersion());
@@ -673,7 +634,7 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
     change.getFieldsDeleted().add(new FieldChange().withName("displayName").withOldValue("displayName1"));
     change.getFieldsDeleted().add(new FieldChange().withName("profile").withOldValue(profile1));
     change.getFieldsDeleted().add(new FieldChange().withName("isBot").withOldValue(true).withNewValue(null));
-    patchEntityAndCheck(user, origJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change, update);
+    patchEntityAndCheck(user, origJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
   }
 
   @Test
@@ -706,34 +667,79 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
         entityNotFound("user", user.getId()));
   }
 
-  private User createUserAndCheckRoles(CreateUser create, List<UUID> expectedRolesIds) throws HttpResponseException {
+  @Test
+  void put_generateToken_bot_user_200_ok(TestInfo test)
+      throws HttpResponseException, MalformedURLException, JwkException {
+    User user =
+        createEntity(
+            createRequest(test, 6)
+                .withName("ingestion-bot-jwt")
+                .withDisplayName("ingestion-bot-jwt")
+                .withEmail("ingestion-bot-jwt@email.com")
+                .withIsBot(true),
+            authHeaders("ingestion-bot-jwt@email.com"));
+    JWTAuthMechanism authMechanism = new JWTAuthMechanism().withJWTTokenExpiry(JWTTokenExpiry.Seven);
+    TestUtils.put(
+        getResource(String.format("users/generateToken/%s", user.getId())),
+        JWTTokenExpiry.Seven,
+        OK,
+        ADMIN_AUTH_HEADERS);
+    user = getEntity(user.getId(), ADMIN_AUTH_HEADERS);
+    assertNull(user.getAuthenticationMechanism());
+    JWTAuthMechanism jwtAuthMechanism =
+        TestUtils.get(
+            getResource(String.format("users/token/%s", user.getId())), JWTAuthMechanism.class, ADMIN_AUTH_HEADERS);
+    assertNotNull(jwtAuthMechanism.getJWTToken());
+    DecodedJWT jwt = decodedJWT(jwtAuthMechanism.getJWTToken());
+    Date date = jwt.getExpiresAt();
+    long daysBetween = ((date.getTime() - jwt.getIssuedAt().getTime()) / (1000 * 60 * 60 * 24));
+    assertTrue(daysBetween >= 6);
+    assertEquals("ingestion-bot-jwt", jwt.getClaims().get("sub").asString());
+    assertEquals(true, jwt.getClaims().get("isBot").asBoolean());
+    TestUtils.put(getResource(String.format("users/revokeToken/%s", user.getId())), User.class, OK, ADMIN_AUTH_HEADERS);
+    jwtAuthMechanism =
+        TestUtils.get(
+            getResource(String.format("users/token/%s", user.getId())), JWTAuthMechanism.class, ADMIN_AUTH_HEADERS);
+    assertEquals(StringUtils.EMPTY, jwtAuthMechanism.getJWTToken());
+  }
+
+  private DecodedJWT decodedJWT(String token) throws MalformedURLException, JwkException, HttpResponseException {
+    DecodedJWT jwt;
+    try {
+      jwt = JWT.decode(token);
+    } catch (JWTDecodeException e) {
+      throw new AuthenticationException("Invalid token", e);
+    }
+
+    // Check if expired
+    // if the expiresAt set to null, treat it as never expiring token
+    if (jwt.getExpiresAt() != null
+        && jwt.getExpiresAt().before(Calendar.getInstance(TimeZone.getTimeZone("UTC")).getTime())) {
+      throw new AuthenticationException("Expired token!");
+    }
+
+    return jwt;
+  }
+
+  @SneakyThrows
+  private User createUserAndCheckRoles(
+      CreateUser create, List<EntityReference> expectedRoles, List<EntityReference> expectedInheritedRoles) {
     User user = createEntity(create, ADMIN_AUTH_HEADERS);
-    assertRoles(user, expectedRolesIds);
+    assertRoles(user, expectedRoles, expectedInheritedRoles);
+
+    user = getEntity(user.getId(), "roles", ADMIN_AUTH_HEADERS);
+    assertRoles(user, expectedRoles, expectedInheritedRoles);
     return user;
   }
 
-  private void assertRoles(User user, List<UUID> expectedRolesIds) throws HttpResponseException {
-    user = getEntity(user.getId(), ADMIN_AUTH_HEADERS);
-    List<UUID> actualRolesIds =
-        user.getRoles().stream().map(EntityReference::getId).sorted().collect(Collectors.toList());
-    Collections.sort(expectedRolesIds);
-    assertEquals(expectedRolesIds, actualRolesIds);
-  }
-
-  private User patchUser(UUID userId, String originalJson, User updated, Map<String, String> headers)
-      throws JsonProcessingException, HttpResponseException {
-    String updatedJson = JsonUtils.pojoToJson(updated);
-    JsonPatch patch = JsonUtils.getJsonPatch(originalJson, updatedJson);
-    return TestUtils.patch(CatalogApplicationTest.getResource("users/" + userId), patch, User.class, headers);
-  }
-
-  private User patchUser(String originalJson, User updated, Map<String, String> headers)
-      throws JsonProcessingException, HttpResponseException {
-    return patchUser(updated.getId(), originalJson, updated, headers);
+  private void assertRoles(
+      User user, List<EntityReference> expectedRoles, List<EntityReference> expectedInheritedRoles) {
+    assertEntityReferenceList(expectedRoles, user.getRoles());
+    assertEntityReferenceList(expectedInheritedRoles, user.getInheritedRoles());
   }
 
   @Override
-  public EntityInterface<User> validateGetWithDifferentFields(User user, boolean byName) throws HttpResponseException {
+  public User validateGetWithDifferentFields(User user, boolean byName) throws HttpResponseException {
     String fields = "";
     user =
         byName
@@ -748,20 +754,15 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
             : getEntity(user.getId(), fields, ADMIN_AUTH_HEADERS);
     assertListNotNull(user.getProfile(), user.getRoles(), user.getTeams(), user.getFollows(), user.getOwns());
     validateAlphabeticalOrdering(user.getTeams(), EntityUtil.compareEntityReference);
-    return getEntityInterface(user);
+    return user;
   }
 
   @Override
-  public CreateUser createRequest(String name, String description, String displayName, EntityReference owner) {
+  public CreateUser createRequest(String name) {
     // user part of the email should be less than 64 in length
     String emailUser = nullOrEmpty(name) ? UUID.randomUUID().toString() : name;
     emailUser = emailUser.length() > 64 ? emailUser.substring(0, 64) : emailUser;
-    return new CreateUser()
-        .withName(name)
-        .withEmail(emailUser + "@open-metadata.org")
-        .withDescription(description)
-        .withDisplayName(displayName)
-        .withProfile(PROFILE);
+    return new CreateUser().withName(name).withEmail(emailUser + "@open-metadata.org").withProfile(PROFILE);
   }
 
   @Override
@@ -790,12 +791,9 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
   }
 
   @Override
-  public void validateCreatedEntity(User user, CreateUser createRequest, Map<String, String> authHeaders) {
-    validateCommonEntityFields(
-        getEntityInterface(user),
-        createRequest.getDescription(),
-        TestUtils.getPrincipal(authHeaders),
-        Entity.getEntityReference(user));
+  public void validateCreatedEntity(User user, CreateUser createRequest, Map<String, String> authHeaders)
+      throws HttpResponseException {
+    validateCommonEntityFields(user, createRequest.getDescription(), TestUtils.getPrincipal(authHeaders), null);
 
     assertEquals(createRequest.getName(), user.getName());
     assertEquals(createRequest.getDisplayName(), user.getDisplayName());
@@ -807,12 +805,7 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
     for (UUID roleId : listOrEmpty(createRequest.getRoles())) {
       expectedRoles.add(new EntityReference().withId(roleId).withType(Entity.ROLE));
     }
-    if (expectedRoles.isEmpty()) {
-      // Default role of data consumer is added when roles are not assigned to a user during create
-      TestUtils.assertEntityReferenceList(List.of(DATA_CONSUMER_ROLE_REFERENCE), user.getRoles());
-    } else {
-      TestUtils.assertEntityReferenceList(expectedRoles, user.getRoles());
-    }
+    assertRoles(user, expectedRoles, List.of(DATA_CONSUMER_ROLE_REFERENCE));
 
     List<EntityReference> expectedTeams = new ArrayList<>();
     for (UUID teamId : listOrEmpty(createRequest.getTeams())) {
@@ -827,11 +820,7 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
 
   @Override
   public void compareEntities(User expected, User updated, Map<String, String> authHeaders) {
-    validateCommonEntityFields(
-        getEntityInterface(expected),
-        expected.getDescription(),
-        TestUtils.getPrincipal(authHeaders),
-        Entity.getEntityReference(expected));
+    validateCommonEntityFields(expected, expected.getDescription(), TestUtils.getPrincipal(authHeaders), null);
 
     assertEquals(expected.getName(), expected.getName());
     assertEquals(expected.getDisplayName(), expected.getDisplayName());
@@ -845,11 +834,6 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
     if (expected.getProfile() != null) {
       assertEquals(expected.getProfile(), updated.getProfile());
     }
-  }
-
-  @Override
-  public EntityInterface<User> getEntityInterface(User entity) {
-    return new UserEntityInterface(entity);
   }
 
   @Override
@@ -869,5 +853,14 @@ public class UserResourceTest extends EntityResourceTest<User, CreateUser> {
     } else {
       assertCommonFieldChange(fieldName, expected, actual);
     }
+  }
+
+  private EntityReference getDefaultRole() throws HttpResponseException {
+    RoleResourceTest roleResourceTest = new RoleResourceTest();
+    List<Role> roles = roleResourceTest.getDefaultRoles();
+    if (roleResourceTest.getDefaultRoles().size() == 0) {
+      return null;
+    }
+    return roles.get(0).getEntityReference();
   }
 }
